; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_sdio_slave.c_sdio_slave_send_queue.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_sdio_slave.c_sdio_slave_send_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i64, i64, i32, i32, i8*, i32* }

@.str = private unnamed_addr constant [9 x i8] c"len <= 0\00", align 1
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [56 x i8] c"buffer to send should be DMA capable and 32-bit aligned\00", align 1
@context = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@SDIO_SLAVE_SEND_PACKET = common dso_local global i32 0, align 4
@send_write_desc = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @sdio_slave_send_queue(i32* %0, i64 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_6__, align 8
  %11 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i64, i64* %7, align 8
  %13 = icmp ugt i64 %12, 0
  %14 = zext i1 %13 to i32
  %15 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %16 = call i32 @SDIO_SLAVE_CHECK(i32 %14, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i32 %15)
  %17 = load i32*, i32** %6, align 8
  %18 = call i64 @esp_ptr_dma_capable(i32* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %4
  %21 = load i32*, i32** %6, align 8
  %22 = ptrtoint i32* %21 to i32
  %23 = srem i32 %22, 4
  %24 = icmp eq i32 %23, 0
  br label %25

25:                                               ; preds = %20, %4
  %26 = phi i1 [ false, %4 ], [ %24, %20 ]
  %27 = zext i1 %26 to i32
  %28 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %29 = call i32 @SDIO_SLAVE_CHECK(i32 %27, i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.1, i64 0, i64 0), i32 %28)
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 0
  %31 = load i64, i64* %7, align 8
  store i64 %31, i64* %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 1
  %33 = load i64, i64* %7, align 8
  store i64 %33, i64* %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 2
  store i32 1, i32* %34, align 8
  %35 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 3
  %36 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @context, i32 0, i32 1, i32 0), align 4
  %37 = load i32, i32* @SDIO_SLAVE_SEND_PACKET, align 4
  %38 = icmp eq i32 %36, %37
  %39 = zext i1 %38 to i64
  %40 = select i1 %38, i32 1, i32 0
  store i32 %40, i32* %35, align 4
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 4
  %42 = load i8*, i8** %8, align 8
  store i8* %42, i8** %41, align 8
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %10, i32 0, i32 5
  %44 = load i32*, i32** %6, align 8
  store i32* %44, i32** %43, align 8
  %45 = load i32, i32* @send_write_desc, align 4
  %46 = load i32, i32* %9, align 4
  %47 = call i64 @sdio_ringbuf_send(i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @context, i32 0, i32 0), i32 %45, %struct.TYPE_6__* %10, i32 %46)
  store i64 %47, i64* %11, align 8
  %48 = load i64, i64* %11, align 8
  %49 = load i64, i64* @ESP_OK, align 8
  %50 = icmp ne i64 %48, %49
  br i1 %50, label %51, label %53

51:                                               ; preds = %25
  %52 = load i64, i64* %11, align 8
  store i64 %52, i64* %5, align 8
  br label %56

53:                                               ; preds = %25
  %54 = call i32 (...) @send_isr_invoke()
  %55 = load i64, i64* @ESP_OK, align 8
  store i64 %55, i64* %5, align 8
  br label %56

56:                                               ; preds = %53, %51
  %57 = load i64, i64* %5, align 8
  ret i64 %57
}

declare dso_local i32 @SDIO_SLAVE_CHECK(i32, i8*, i32) #1

declare dso_local i64 @esp_ptr_dma_capable(i32*) #1

declare dso_local i64 @sdio_ringbuf_send(i32*, i32, %struct.TYPE_6__*, i32) #1

declare dso_local i32 @send_isr_invoke(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
